Fix: Dark mode text glow
The dark mode text glow effect was not visible. This commit addresses this issue.

--- a/src/index.css
+++ b/src/index.css
@@ -48,11 +48,7 @@
   }
 
   .heading-glow {
-    @apply dark:text-white 
-    dark:drop-shadow-[0_-10px_50px_rgba(249,115,22,0.8)]
-    dark:drop-shadow-[0_10px_50px_rgba(14,165,233,0.8)]
-    dark:drop-shadow-[0_0_70px_rgba(249,115,22,0.5)]
-    dark:drop-shadow-[0_0_70px_rgba(14,165,233,0.5)];
+    @apply dark:[text-shadow:0_-1px_4px_#FFF,0_-2px_10px_#ff993b,0_-10px_20px_#F97316,0_-18px_40px_rgba(249,115,22,0.5),0_10px_20px_#0EA5E9,0_2px_10px_#33C3F0,0_1px_4px_#FFF];
   }
 }
 
